@@ -50,12 +50,13 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>DocumentAssignRoles</string> </value>
+            <value> <string>Document_updateLocalRoles</string> </value>
         </item>
         <item>
             <key> <string>method_id</string> </key>
             <value>
               <list>
+                <string>_edit</string>
                 <string>_set.*</string>
                 <string>submit</string>
               </list>
@@ -63,21 +64,12 @@
         </item>
         <item>
             <key> <string>once_per_transaction</string> </key>
-            <value> <int>1</int> </value>
+            <value> <int>0</int> </value>
         </item>
         <item>
             <key> <string>portal_type_filter</string> </key>
             <value>
-              <list>
-                <string>Drawing</string>
-                <string>File</string>
-                <string>Image</string>
-                <string>PDF</string>
-                <string>Presentation</string>
-                <string>Spreadsheet</string>
-                <string>Text</string>
-                <string>Web Page</string>
-              </list>
+              <none/>
             </value>
         </item>
         <item>
@@ -85,6 +77,10 @@
             <value>
               <tuple/>
             </value>
+        </item>
+        <item>
+            <key> <string>temporary_document_disallowed</string> </key>
+            <value> <int>1</int> </value>
         </item>
         <item>
             <key> <string>title</string> </key>
