@@ -1,3 +1,6 @@
+2011-03-02 Kazuhiko
+* cleanup document_security_interaction_workflow.
+
 2011-01-04 Ivan
 * Add upgrader alarm that is able to handle migration of embedded "File" & "Image" objects to "Embedded File" portal type
 
